--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+DEBUG_MODE=False
+
+OPENROUTER_API_KEY=your_openai_api_key_here
+LANGUAGE_MODEL = openai/gpt-4o-mini
+
 LINE_CHANNEL_ACCESS_TOKEN=your_channel_access_token_here
 LINE_CHANNEL_SECRET=your_channel_secret_here
-OPENAI_API_KEY=your_openai_api_key_here
+
 PORT=5000
+
+RESPONSE_LANGUAGE=Japanese
