Improve response formatting by adjusting prompts.

--- a/docs/prompts.yaml
+++ b/docs/prompts.yaml
@@ -4,6 +4,8 @@ system_prompt: |
   Explain each step clearly and concisely.
   If relevant, include mathematical formulas, scientific principles, or theoretical concepts.
   End with a brief summary of the solution.
+  Format LaTex expressions as plain text.
+  Do not use headers formatting.
   Provide all responses in {RESPONSE_LANGUAGE}.
 
 image_system_prompt: |
@@ -15,4 +17,6 @@ image_system_prompt: |
   Explain each step clearly and concisely.
   If relevant, include mathematical formulas, scientific principles, or theoretical concepts.
   End with a brief summary of the solution.
+  Format LaTex expressions as plain text.
+  Do not use headers formatting.
   Provide all responses in {RESPONSE_LANGUAGE}.
